[gd_scene load_steps=26 format=2]

[ext_resource path="res://scenes/slowmo/SlowmoController.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/controller/PlayerController.gd" type="Script" id=2]
[ext_resource path="res://scenes/camera/camera.gd" type="Script" id=3]
[ext_resource path="res://assets/circle.png" type="Texture" id=4]
[ext_resource path="res://scenes/flash/Flash.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("dot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dot:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0784314 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "blink"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("dot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dot:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0784314 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "fade"

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("dot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dot:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0784314 ) ]
}

[sub_resource type="Animation" id=25]
resource_name = "blink"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("dot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dot:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0784314 ) ]
}

[sub_resource type="Animation" id=26]
resource_name = "fade"

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("dot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dot:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0784314 ) ]
}

[sub_resource type="Animation" id=28]
resource_name = "blink"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("dot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dot:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0784314 ) ]
}

[sub_resource type="Animation" id=29]
resource_name = "fade"

[sub_resource type="Animation" id=30]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("dot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dot:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0784314 ) ]
}

[sub_resource type="Animation" id=31]
resource_name = "blink"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("dot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dot:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0784314 ) ]
}

[sub_resource type="Animation" id=32]
resource_name = "fade"

[sub_resource type="Animation" id=33]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("dot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dot:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0784314 ) ]
}

[sub_resource type="Animation" id=34]
resource_name = "blink"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("dot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dot:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0784314 ) ]
}

[sub_resource type="Animation" id=35]
resource_name = "fade"

[sub_resource type="Animation" id=36]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("dot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dot:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0784314 ) ]
}

[sub_resource type="Animation" id=37]
resource_name = "blink"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("dot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dot:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0784314 ) ]
}

[sub_resource type="Animation" id=38]
resource_name = "fade"

[sub_resource type="Animation" id=40]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Spots:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=39]
resource_name = "shake"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Spots:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 0.5, 2, 0.5, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1, 0 ), Vector2( 0, 0 ), Vector2( 1, 0 ) ]
}

[node name="PlayerController" type="Node2D"]
position = Vector2( 360, 720 )
script = ExtResource( 2 )

[node name="Particles" type="Node2D" parent="."]

[node name="Spots" type="Node2D" parent="."]
rotation = 0.0174533

[node name="spot" type="Node2D" parent="Spots"]
modulate = Color( 1, 1, 1, 0.827451 )
position = Vector2( -190, -220 )

[node name="Sprite" type="Sprite" parent="Spots/spot"]
modulate = Color( 1, 1, 1, 0.827451 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="dot" type="Sprite" parent="Spots/spot"]
visible = false
modulate = Color( 1, 1, 1, 0.0784314 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Spots/spot"]
playback_speed = 1.2
anims/RESET = SubResource( 11 )
anims/blink = SubResource( 12 )
anims/fade = SubResource( 23 )

[node name="spot2" type="Node2D" parent="Spots"]
position = Vector2( 190, -220 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Spots/spot2"]
modulate = Color( 1, 1, 1, 0.827451 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="dot" type="Sprite" parent="Spots/spot2"]
visible = false
modulate = Color( 1, 1, 1, 0.0784314 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Spots/spot2"]
playback_speed = 1.2
anims/RESET = SubResource( 24 )
anims/blink = SubResource( 25 )
anims/fade = SubResource( 26 )

[node name="spot3" type="Node2D" parent="Spots"]
position = Vector2( -190, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Spots/spot3"]
modulate = Color( 1, 1, 1, 0.827451 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="dot" type="Sprite" parent="Spots/spot3"]
visible = false
modulate = Color( 1, 1, 1, 0.0784314 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Spots/spot3"]
playback_speed = 1.2
anims/RESET = SubResource( 27 )
anims/blink = SubResource( 28 )
anims/fade = SubResource( 29 )

[node name="spot4" type="Node2D" parent="Spots"]
position = Vector2( 190, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Spots/spot4"]
modulate = Color( 1, 1, 1, 0.827451 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="dot" type="Sprite" parent="Spots/spot4"]
visible = false
modulate = Color( 1, 1, 1, 0.0784314 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Spots/spot4"]
playback_speed = 1.2
anims/RESET = SubResource( 30 )
anims/blink = SubResource( 31 )
anims/fade = SubResource( 32 )

[node name="spot5" type="Node2D" parent="Spots"]
position = Vector2( -190, 220 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Spots/spot5"]
modulate = Color( 1, 1, 1, 0.827451 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="dot" type="Sprite" parent="Spots/spot5"]
visible = false
modulate = Color( 1, 1, 1, 0.0784314 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Spots/spot5"]
playback_speed = 1.2
anims/RESET = SubResource( 33 )
anims/blink = SubResource( 34 )
anims/fade = SubResource( 35 )

[node name="spot6" type="Node2D" parent="Spots"]
position = Vector2( 190, 220 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Spots/spot6"]
modulate = Color( 1, 1, 1, 0.827451 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="dot" type="Sprite" parent="Spots/spot6"]
visible = false
modulate = Color( 1, 1, 1, 0.0784314 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Spots/spot6"]
playback_speed = 1.2
anims/RESET = SubResource( 36 )
anims/blink = SubResource( 37 )
anims/fade = SubResource( 38 )

[node name="BallContainer" type="Node2D" parent="."]

[node name="Animations" type="Node2D" parent="."]

[node name="Tween" type="Tween" parent="Animations"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animations"]
anims/RESET = SubResource( 40 )
anims/shake = SubResource( 39 )

[node name="SlowmoController" parent="." instance=ExtResource( 1 )]

[node name="Flash" type="Node2D" parent="."]

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Camera2D" type="Camera2D" parent="GUI"]
position = Vector2( 360, 720 )
current = true
script = ExtResource( 3 )

[node name="Flash" parent="GUI" instance=ExtResource( 5 )]

[node name="Timers" type="Node2D" parent="."]

[node name="ControlTimer" type="Timer" parent="Timers"]
wait_time = 0.01
one_shot = true

[connection signal="timeout" from="Timers/ControlTimer" to="." method="_on_ControlTimer_timeout"]
